# layerlab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/layer/: color.h  common.h  fourier.h  frame.h  fresnel.h  hg.h  layer.h  log.h  math.h  microfacet.h  mmap.h  quad.h  simd.h  spline.h  storage.h  vector.h
recipes/: coated-diffuse.py  coated-gold-with-scatmedium.py  coated-gold.py  extract.py
recipes/utils/: cie.py  materials.py
src/: fourier.cpp  fresnel.cpp  hg.cpp  layer.cpp  log.cpp  math.cpp  microfacet.cpp  mmap.cpp  py_doc.h  py_filesystem.cpp  py_fourier.cpp  py_fresnel.cpp  py_layer.cpp  py_math.cpp  py_quad.cpp  py_spline.cpp  py_vector.cpp  python.cpp  python.h  simd.cpp  storage.cpp
tests/: test_spline.py
